--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "A simple blockchain built with Javascript for understanding the working of real blockchains.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "hex-to-binary": "^1.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
